--- a/postgres-service.yml
+++ b/postgres-service.yml
@@ -1,14 +1,11 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: db
-  labels:
-    name: db-service
-    app: demo-voting-app
+  name: postgres-service
 spec:
   ports:
-    - port: 5432
-      targetPort: 5432
+    - targetPort: 5432
+      port: 5432
   selector:
-    name: postgres-pod
-    app: demo-voting-app
+    name: postgres
