--- a/redis-service.yml
+++ b/redis-service.yml
@@ -1,14 +1,12 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
-  labels:
-    name: redis-service
-    app: demo-voting-app
+  name: redis-service
 spec:
   ports:
-    - port: 6379
-      targetPort: 6379
+    - targetPort: 6379
+      port: 6379
   selector:
-    name: redis-pod
-    app: demo-voting-app
+    name: redis
+...
