--- a/result-app-deployment.yml
+++ b/result-app-deployment.yml
@@ -4,21 +4,19 @@ kind: Deployment
 metadata:
   name: result-app-deployment
   labels:
-    name: result-app-deployment
+    name: result-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      name: result-app-deployment
+      name: result-app
   template:
     metadata:
       name: result-app-pod
       labels:
-        name: result-app-deployment
+        name: result-app
     spec:
       containers:
         - name: result-app
           image: dockersamples/examplevotingapp_result
-          ports:
-            - containerPort: 80
 ...
