--- a/result-app-service.yml
+++ b/result-app-service.yml
@@ -1,15 +1,13 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: result-service
-  labels:
-    name: result-service
-    app: demo-voting-app
+  name: result-app-service
 spec:
   type: LoadBalancer
   ports:
-    - port: 80
-      targetPort: 80
+    - targetPort: 80
+      port: 80
   selector:
-    name: result-app-pod
-    app: demo-voting-app
+    name: result-app
+...
