--- a/voting-app-deployment.yml
+++ b/voting-app-deployment.yml
@@ -4,21 +4,20 @@ kind: Deployment
 metadata:
   name: voting-app-deployment
   labels:
-    name: voting-app-deployment
+    name: voting-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      name: voting-app-deployment
+      name: voting-app
   template:
     metadata:
       name: voting-app-pod
       labels:
-        name: voting-app-deployment
+        name: voting-app
     spec:
       containers:
         - name: voting-app
           image: dockersamples/examplevotingapp_vote
-          ports:
-            - containerPort: 80
+
 ...
