--- a/worker-deployment.yml
+++ b/worker-deployment.yml
@@ -2,20 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: worker-deployment
+  name: worker-app-deployment
   labels:
-    name: worker-deployment
+    name: worker-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: worker-deployment
+      name: worker-app
   template:
     metadata:
-      name: worker-pod
+      name: worker-app-pod
       labels:
-        name: worker-deployment
+        name: worker-app
     spec:
       containers:
-        - name: worker
+        - name: worker-app
           image: dockersamples/examplevotingapp_worker
+...
